<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FreeWifi</string>
    <string name="tv_helloworld">Hello world</string>
    <string name="btn_clickme">Click me</string>
    <string name="btn_locate">Locate</string>
    <string name="btn_changeloc">ChangLoc</string>
    <string name="btn_sharetowechat">Share to Wechat Session</string>
    <string name="btn_checksupformoments">Check Support of Moments</string>
    <string name="btn_sharetowechatmoments">Share to Wechat Moments</string>

    <string name="actionbar_title">TestMainPage</string>

    <string-array name="aty_list">
        <item>Wifi</item> <!--Wifi测试页-->
        <item>SendUserInfo</item> <!--注册测试页-->
        <item>Locating</item> <!--定位测试页-->
        <item>JsonTest</item> <!--Json测试页-->
        <item>PushTest</item> <!--Push测试页-->
        <item>ServerPageTest</item>
        <item>WechatShare</item>
        <item>BDMap</item>
        <item>Login</item>
    </string-array>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="server">http://172.16.5.22:8080/freewifiserver</string>
    <string name="collectbtn">收藏</string>

    <string name="error_tag_gs_empty">error_tag_gs_empty</string>
    <string name="debug">debug</string>

</resources>
