<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:orientation="vertical">
        <TextView android:id="@+id/tv_wechat"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="@string/tv_helloworld" />
		<Button android:id="@+id/btn_shareToWechatSession"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_sharetowechat"
			android:onClick="onClickProcess" />
		<Button android:id="@+id/btn_shareToWechatMoments"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_sharetowechatmoments"
			android:onClick="onClickProcess" />
		<Button android:id="@+id/btn_checkWechatMoments"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_checksupformoments"
			android:onClick="onClickProcess" />
		<Button android:id="@+id/btn1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_clickme"
			android:onClick="onClickProcess"
			android:visibility="gone" />
    </LinearLayout>
    
</ScrollView>
